edit javascript and CSS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <!-- Game Box in the center -->
 <body>
 	<div class="container">
-		<header>Matching Game</header>
+		<header>
+			<h1>Matching Game</h1>
+		</header>
 
 		<section class="scores-section">
 			<ul class="stars">
