--- a/index.html
+++ b/index.html
@@ -1,40 +1,36 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<title>Matching Game</title>
+    <meta charset="utf-8">
+    <title>Matching Game</title>
+    <meta name="description" content="">
+    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<!-- Title -->
-		<head> 
-		<meta charset="utf-8">
-		<title> Matching Game </title>
-		<meta name="description" content="">
-	    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-	    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-	    <link rel="stylesheet" href="style/style.css">
-		</head>
-
-<!-- Game Box in the center -->
 <body>
-	<div class="container">
-		<header>
-			<h1>Matching Game</h1>
-		</header>
 
-		<section class="scores-section">
-			<ul class="stars">
-				<li><i class="fa fa-star"></i></li>
-				<li><i class="fa fa-star"></i></li>
-				<li><i class="fa fa-star"></i></li>
-			</ul>
+    <div class="container">
+        <header>
+            <h1>Matching Game</h1>
+        </header>
 
-		<span class="moves"> 3 </span> Moves
+        <section class="score-panel">
+            <ul class="stars">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+            </ul>
 
-		<div class="redo">
-			<i class="fa fa-repeat"></i>
-		</div>
+            <span class="moves">3</span> Moves
 
-		<ul class="cards">
-			 <li class="card">
+            <div class="restart">
+                <i class="fa fa-repeat"></i>
+            </div>
+        </section>
+
+        <ul class="deck">
+            <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
             <li class="card">
@@ -82,8 +78,13 @@
             <li class="card">
                 <i class="fa fa-cube"></i>
             </li>
-		</ul>
-		</section>
-	</div>
+        </ul>
+    </div>
+<ul id="myUL">
+    
+</ul>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="js/app.js"></script>
+   
 </body>
 </html>
